/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2014 NUbots <nubots@nubots.net>
 */

package messages.support.nubugger.proto;

message ConfigurationState {

    message KeyPair {
        required string name = 1;
        required Node value = 2;
        optional string path = 3;
    }

    message Node {
        enum Type {
            DIRECTORY = 1;
            FILE = 2;
            NULL_VALUE = 3;
            STRING = 4;
            BOOLEAN = 5;
            LONG = 6;
            DOUBLE = 7;
            SEQUENCE = 8;
            MAP = 9;
        }

        required Type type = 1;
        optional string tag = 2;
        optional string string_value = 3;
        optional bool boolean_value = 4;
        optional sint64 long_value = 5;
        optional double double_value = 6;
        repeated Node sequence_value = 7;
        repeated KeyPair map_value = 8;
    }

    required Node root = 1;
}
